<resources>
    <string name="app_name">Scolari</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Entrar</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">Registrate aquí</string>
    <string name="tab_contacts">Contactos</string>
    <string name="tab_academy">Academia</string>
    <string name="tab_calendar">Calendario</string>
    <string name="tab_perform">Rendimiento</string>
    <string name="tab_home">Crear nueva actividad</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Usuario</string>
    <string name="hint_user">Nombre Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="hint_namePeriodo">Periodo</string>
    <string name="hint_nameMateria">Materia</string>
    <string name="hint_tarea">Nombre de la tarea</string>
    <string name="hint_descripcionAct">Descripción</string>
    <string name="hint_descripcionPer">Descripción</string>
    <string name="hint_Horario">Horario</string>
    <string name="hint_HorarioAct">Horario</string>
    <string name="hint_fechaAct">Fecha</string>
    <string name="hint_aula">Aula</string>
    <string name="text_button_creatAct">Crear</string>
    <string name="text_button_PriorityAct">Prioridad</string>
    <string name="titlemateria_name">Ing. Software</string>
    <string name="materianame_title">Ing. sfotware</string>

    <!-- Strings para toast floatingButton -->
    <string name="mensaje_periodo">Nuevo Periodo</string>
    <string name="mensaje_materia">Nueva Materia</string>
    <string name="mensaje_actividad">Nueva Actividad</string>

</resources>
